--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,13 @@
   background-color: #ffffff;
 }
 
+:root {
+  --brand-color: #ffffff;
+}
+
 /*header*/
 .header {
-  border-bottom: 1px solid var(--cornflower, #e7e9fc);
   background: var(--white, #fff);
-  width: 1440px;
-
   flex-shrink: 0;
 }
 
@@ -43,7 +44,6 @@
 
 .phone {
   color: var(--slate, #434455);
-  /* Body */
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
@@ -54,8 +54,6 @@
 
 .dark-bg {
   background: var(--navyblue, #2e2f42);
-  width: 1440px;
-  height: 600px;
   flex-shrink: 0;
 }
 
@@ -70,9 +68,7 @@
 }
 
 .main-button {
-  border-radius: 4px;
   background: var(--iris, #4d5ae5);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .main-strategy {
@@ -152,16 +148,8 @@
   font-weight: 700;
 }
 
-.main-page-img {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
 .Light-bg {
   background: var(--cloud, #f4f4fd);
-  width: 1440px;
-  height: 732px;
   flex-shrink: 0;
 }
 
@@ -175,12 +163,8 @@
 }
 
 .team-card {
-  display: inline-flex;
   padding-bottom: 0px;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 32px;
 }
 
 .team-card-text1 {
@@ -205,8 +189,6 @@
 
 .footer-dark-bg {
   background: var(--navyblue, #2e2f42);
-  width: 1440px;
-  height: 312px;
   flex-shrink: 0;
 }
 
@@ -239,17 +221,11 @@
 /*main portfolio*/
 
 .body-portfolio {
-  width: 1440px;
-  height: 2076px;
   color: #434455;
 }
 
 .project-card {
-  display: flex;
   padding-bottom: 0px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
   border: 1px solid var(--cornflower, #e7e9fc);
   background: var(--white, #fff);
 }
