--- a/css/styles.css
+++ b/css/styles.css
@@ -27,49 +27,53 @@
 }
 
 .link:hover {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .link:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .logo {
   color: #4d5ae5;
   text-transform: uppercase;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
 }
 
+.logo:root {
+  color: #4d5ae5;
+}
+
 .accent {
   color: var(--navyblue, #2e2f42);
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
 }
 
 .list {
   list-style: none;
 }
 
-.navigation {
-  color: #2e2f42
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
+.guidance {
+  color: #2e2f42;
   font-weight: 500;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
+.guidance:hover {
+  color: #404bbf;
+}
+
+.guidance:focus {
+  color: #404bbf;
+}
+
 .header-address {
-    font-style: normal;
+  font-style: normal;
 }
 
 .email {
@@ -82,6 +86,10 @@
   letter-spacing: 0.02em;
 }
 
+.email:root {
+  color: #434455;
+}
+
 .phone {
   color: #434455;
   font-family: Roboto;
@@ -90,6 +98,10 @@
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.phone:root {
+  color: #434455;
 }
 
 /*main*/
@@ -112,8 +124,8 @@
 }
 
 .main-button {
-  background: #4D5AE5;
-  font-family:"Roboto", sans-serif;
+  background: #4d5ae5;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -123,7 +135,11 @@
 }
 
 .main-button:hover {
-    background-color:#404BBF;
+  background-color: #404bbf;
+}
+
+.main-button:focus {
+  background-color: #404bbf;
 }
 
 /*Друга секція основного контенту*/
@@ -172,7 +188,7 @@
 .fourth-section {
   padding-bottom: 0px;
   justify-content: center;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .main-fourth-section {
@@ -239,70 +255,70 @@
 }
 
 .first-item-header {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .first-item-header:hover {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 ..first-item-header:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .main-button-portfolio {
-    line-height: 1.5;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 0.04em;
-    color:  #4d5ae5;
-    background-color: #F4F4FD;
-    cursor: pointer;
+  line-height: 1.5;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  background-color: #f4f4fd;
+  cursor: pointer;
 }
 
 .main-button-portfolio:hover {
-    color: #FFFFFF;
-    background-color: #404BBF;
+  color: #ffffff;
+  background-color: #404bbf;
 }
 
 .main-button-portfolio:focus {
-    color: #FFFFFF;
-    background-color: #404BBF;
+  color: #ffffff;
+  background-color: #404bbf;
 }
 
 .email-portfolio {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color:  #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 .email-portfolio:hover {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .email-portfolio:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .phone-portfolio {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color:  #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 .phone-portfolio:hover {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .phone-portfolio:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .project-card {
