--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,7 @@
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .project-text:root {
@@ -343,6 +344,7 @@
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #434455;
 }
 
 .project-card-text:root {
